# matchvision

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json  requirements-dev.txt  requirements-postgres.txt  requirements.txt  start.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_openfootball_provenance.py  0003_openfootball_catalogs.py  0004_openfootball_conflict_scope.py
backend/app/: __init__.py  cli.py  config.py  constants.py  db.py  logging_config.py  main.py  models.py  repositories.py  schemas.py  seed.py
backend/app/api/: catalog.py  github_sync.py  health.py  imports.py  matches.py  model_registry.py  openfootball.py  predictions.py  router.py
backend/app/data_sources/: __init__.py  football_data.py  statsbomb.py
backend/app/ml/: __init__.py  (+5 more)
backend/data/: upcoming_fixtures.json
backend/docs/: data-sources.md
backend/scripts/: .import_checkpoint.json  auto_import_stats.py  generate_all_lineups.py  generate_player_stats.py  generate_players.py  generate_statistics.py  import_mexico.py  import_real_stats.py  import_upcoming.py  live_sync.py  precompute_predictions.py  scrape_fixtures.py
backend/tests/: conftest.py  test_api.py  test_entity_resolution.py  test_features.py  test_openfootball.py  test_openfootball_catalogs.py  test_openfootball_conflicts.py  test_openfootball_hardening.py  test_openfootball_txt_official.py  test_poisson.py  test_providers.py  test_templates.py  test_training.py
(+35 files in other folders)
