[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "matchvision-ai-backend"
version = "0.1.0"
description = "Backend educativo para analitica predictiva de futbol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "joblib>=1.4,<2",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "scikit-learn>=1.5,<2",
  "scipy>=1.14,<2",
  "sqlalchemy>=2.0,<3",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
  "psycopg2-binary>=2.9,<3",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2,<4"]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.7,<1",
]

[project.scripts]
matchvision = "app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]
ignore = ["B008", "E501"]
